--- a/src/index.css
+++ b/src/index.css
@@ -1,20 +1,32 @@
 html {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: 500;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 500;
 }
 
 #nes-canvas {
-    width: 256px;
-    height: 240px;
+  width: 256px;
+  height: 240px;
 
-    image-rendering: -moz-crisp-edges;
-    /* Firefox */
-    image-rendering: -webkit-crisp-edges;
-    /* Webkit (Safari) */
-    image-rendering: pixelated;
-    /* Chrome */
+  image-rendering: -moz-crisp-edges;
+  /* Firefox */
+  image-rendering: -webkit-crisp-edges;
+  /* Webkit (Safari) */
+  image-rendering: pixelated;
+  /* Chrome */
 
-    outline-style: solid;
-    outline-width: thick;
-    outline-color: black;
+  outline-style: solid;
+  outline-width: thick;
+  outline-color: black;
+}
+
+#panels {
+  margin-top: 16px;
+
+  display: flex;
+  flex-direction: row;
+}
+
+.panel {
+  margin-left: 4px;
+  margin-right: 4px;
 }
